--- a/19CLC2_Group01_WebApp/views/vwAccount/register.hbs
+++ b/19CLC2_Group01_WebApp/views/vwAccount/register.hbs
@@ -146,19 +146,19 @@
   -webkit-background-clip: text; -webkit-text-fill-color: transparent; padding-top: 5px; padding-bottom: 10px"> Thông tin người dùng</h4>
                     <div class="input-box">
                         <span class="details">Họ tên</span>
-                        <input type="text" placeholder="Enter your name" name="Name" id = "Name" required>
+                        <input type="text" placeholder="Nhập họ tên" name="Name" id = "Name" required>
                     </div>
                     <div class="input-box">
                         <span class="details">Email</span>
-                        <input type="email" placeholder="Enter your email" name="Email" id="Email" required>
+                        <input type="email" placeholder="Nhập email" name="Email" id="Email" required>
                     </div>
                     <div class="input-box">
                         <span class="details">Năm sinh</span>
-                        <input data-toggle="datepicker" type="text" placeholder="Enter your date of birth " required name="Dob">
+                        <input data-toggle="datepicker" type="text" placeholder="Chọn ngày tháng năm sinh" required name="Dob">
                     </div>
                     <div class="input-box">
                         <span class="details">Địa chỉ</span>
-                        <input type="text" placeholder="Enter your address" name="Address"required>
+                        <input type="text" placeholder="Nhập địa chỉ" name="Address"required>
                     </div>
                 </div>
             </div>
@@ -169,15 +169,15 @@
   -webkit-background-clip: text; -webkit-text-fill-color: transparent; padding-top: 5px; padding-bottom: 10px">Thông tin tài khoản</h4>
                     <div class="input-box">
                         <span class="details">Username</span>
-                        <input type="text" placeholder="Enter your username" name="Username" id="Username" required>
+                        <input type="text" placeholder="Nhập username" name="Username" id="Username" required>
                     </div>
                     <div class="input-box">
                         <span class="details">Password</span>
-                        <input type="password" placeholder="Enter your password" name="Password" id="Password" required>
+                        <input type="password" placeholder="Nhập mật khẩu" name="Password" id="Password" required>
                     </div>
                     <div class="input-box">
                         <span class="details">Confirm Password</span>
-                        <input type="password" placeholder="Confirm password" id="ConfirmPassword" required>
+                        <input type="password" placeholder="Xác nhận lại mật khẩu" id="ConfirmPassword" required>
                     </div>
                 </div>
                 <div style="align-items: center; padding-top: 17px" class="g-recaptcha" data-sitekey="6LcBnaQdAAAAAE5JVlofp-twIKK0o6d2x4AczT1L
